# esrc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  compilation_errors.txt  devenv.nix  devenv.yaml  nats_service.md
.aipack/.prompt/pro@coder/: README.md  coder-prompt.md
.aipack/.prompt/pro@coder/.cache/: last_ai_responses_for_prompt.md  last_ai_responses_for_raw.md  last_file_change_fails_report.md  last_prompt_file_paths.md  prompt_files_path.md
.aipack/.prompt/pro@coder/.cache/auto-context/: last_context_file_descriptions.md  last_knowledge_file_descriptions.md
.aipack/.prompt/pro@coder/.cache/code-map/: context-code-map.json  knowledge-code-map.json
.aipack/.prompt/pro@coder/dev/chat/: dev-chat.md
.aipack/.prompt/pro@coder/dev/plan/: plan-1-todo-steps.md  plan-2-active-step.md  plan-3-done-steps.md
_workbench/consumers/: _plan-rules.md  dev-chat.md  plan-1-todo-steps.md  plan-2-active-step.md  plan-3-done-steps.md
_workbench/integration_between_bounded_contexts/: plan-1-todo-steps.md  plan-2-active-step.md  plan-3-done-steps.md
_workbench/queries/: dev-chat.md  plan-1-todo-steps.md  plan-2-active-step.md  plan-3-done-steps.md
_workbench/service/: dev-chat.md  plan-1-todo-steps.md  plan-2-active-step.md  plan-3-done-steps.md
_workbench/service-errors/: dev-chat.md
crates/esrc-cqrs/: Cargo.toml
crates/esrc-cqrs/src/: error.rs  lib.rs  query.rs  registry.rs
crates/esrc-cqrs/src/nats/: aggregate_command_handler.rs  aggregate_projector_handler.rs  aggregate_query_handler.rs  command_dispatcher.rs  live_view_query.rs  mod.rs  query_dispatcher.rs
crates/esrc-cqrs/tests/: integration_nats.rs
crates/nats-kv-governor-rate-limiter/: Cargo.toml
crates/nats-kv-governor-rate-limiter/src/: lib.rs
crates/opentelemetry-nats/: Cargo.toml
derive/: Cargo.toml
derive/src/: envelope.rs  event.rs  lib.rs  util.rs  version.rs
derive/src/util/: lifetime.rs  variant.rs
derive/tests/: test_envelope.rs  test_event.rs  test_version.rs
derive/tests/fixtures/: envelope.rs  event.rs  mod.rs  version.rs
docs/: event-modeling.md
docs/skill/: esrc-command-service-execute-commands.md  esrc-event-modeling-create-consumers-automations-and-read-models.md  esrc-read-model-public-interface-and-queries.md  esrc-slice-constants-and-module-layout.md  esrc-slice-http-controller.md
examples/: multi-slice-command-service.rs
examples/basic-query-service/: domain.rs  main.rs  read_model.rs
examples/cafe/: domain.rs  main.rs  tab.rs  table.rs
examples/cafe/tab/: tests.rs
examples/full-slice-example/: main.rs
examples/full-slice-example/create_operation/: mod.rs
examples/full-slice-example/domain/: mod.rs
examples/full-slice-example/send_email/: mod.rs
examples/multi-slice-command-service/: domain.rs  main.rs
examples/multi-slice-command-service/queue_welcome_email/: mod.rs
examples/multi-slice-command-service/send_welcome_email/: mod.rs
examples/operations/: main.rs
examples/operations/domain/: email.rs  mod.rs  operation.rs
examples/operations/kv_operation_view/: mod.rs
examples/operations/memory_operation_list/: mod.rs
examples/operations/send_notification/: mod.rs
examples/zero_copy/: main.rs
src/: aggregate.rs  envelope.rs  error.rs  event.rs  event_modeling.rs  kurrent.rs  lib.rs  nats.rs  project.rs  query.rs  version.rs  view.rs
src/event/: command_service.rs  event_model.rs  future.rs  publish.rs  replay.rs  subscribe.rs  truncate.rs
src/event/event_model/: view.rs
src/kurrent/: convert.rs  envelope.rs  event.rs  header.rs  subject.rs
src/nats/: command_service.rs  convert.rs  dead_letter.rs  envelope.rs  event.rs  header.rs  legacy.rs  query_kv.rs  query_service.rs  subject.rs
src/query/: in_memory.rs  mod.rs
