[workspace]
members = [".", "./derive"]
resolver = "2"

[workspace.package]
license = "MIT"
authors = ["Wyatt Lindquist <wquist@users.noreply.github.com>"]

rust-version = "1.79"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-nats = "0.37"
darling = "0.20"
futures = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_json = "1.0"
syn = "2.0"
thiserror = "1.0"
tokio = "1.41"
trait-variant = "0.1"
uuid = "1.8"

[package]
name = "esrc"
description = "Primitives for implementing event sourcing and CQRS systems"
version = "0.1.0"

license.workspace = true
authors.workspace = true

rust-version.workspace = true
edition.workspace = true

[features]
default = ["derive", "nats"]
derive = ["dep:esrc-derive"]
nats = ["dep:async-nats", "dep:serde_json"]

[dependencies]
esrc-derive = { path = "./derive", optional = true }

async-nats = { workspace = true, optional = true }
futures.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
trait-variant.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v7"] }
