[package]
name = "esrc-derive"
description = "Procedural macros for the `esrc` crate"
readme = false
version = "0.1.0"

license.workspace = true
authors.workspace = true
repository.workspace = true

rust-version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }

[dev-dependencies]
esrc = { path = "..", default-features = false }

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid.workspace = true
