[package]
name = "opentelemetry-nats"
version = "0.2.1"
description = "Convenience functions for propagating OpenTelemetry traces on NATS messages"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
async-nats = { workspace = true, features = [] }
opentelemetry = { version = "0.23" }
opentelemetry_sdk = { version = "0.23", features = [
    "trace",
    "logs",
    "rt-tokio",
] }
tracing = { workspace = true, features = ["log"] }
tracing-opentelemetry = { version = "0.24" }
